Todo delete added, Tasks add and delete added.

--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,6 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+a {
+  text-decoration: none;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +10,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body{
+  background: rgb(48,219,206);
+  background: linear-gradient(90deg, rgba(103, 219, 210, 0.928) -12%, rgba(44,131,196,1) 67%);
+}
+
+nav{
+  background-color: '#e3f2fd'
 }
